--- a/fundamentos/3-introdução-a-HTML-e-CSS/dia2/index2.html
+++ b/fundamentos/3-introdução-a-HTML-e-CSS/dia2/index2.html
@@ -3,38 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-        #amr{
-            background-color: yellow;
-        }
-        #ver{
-            background-color: red;
-        }  
-        #mar{
-            background-color: brown;
-        }
-
-        p{
-            font-size: 3em;
-            text-align: center;
-            text-decoration:solid;
-            tex
-        }
-        h1{
-            font-family: sans-serif;
-            }
-            p{ font-weight:  600;
-                 font-style:  oblique;
-                 
-            }
-                  body{
-                    font-size: 16px;
-                  }
+    <link rel="stylesheet" type="text/css" href="">
    
-  
-  
-  
-  </style>
   </head>
   <body>
     <h1>Cores</h1>
