--- a/fundamentos/3-introdução-a-HTML-e-CSS/dia2/index2.html
+++ b/fundamentos/3-introdução-a-HTML-e-CSS/dia2/index2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <link rel="stylesheet" type="text/css" href="">
+    <link rel="stylesheet" type="text/css" href="style2.css">
    
   </head>
   <body>
