add botao que leva ao w3

--- a/fundamentos/3-introdução-a-HTML-e-CSS/dia2/index2.html
+++ b/fundamentos/3-introdução-a-HTML-e-CSS/dia2/index2.html
@@ -14,5 +14,6 @@
       <li id="ver">Vermelho</li>
       <li id="mar">Marrom</li>
     </ul>
+    <a  href="https://www.w3schools.com/" target="_blank"> <button type="button">login</button> </a>
   </body>
 </html>
