coloquei o css numa pag separada

--- a/fundamentos/3-introdução-a-HTML-e-CSS/dia2/index.html
+++ b/fundamentos/3-introdução-a-HTML-e-CSS/dia2/index.html
@@ -6,41 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        h2 {
-            color: greenyellow;
-            font-size: 1em;
-        }
+    <link rel="stylesheet" href="style2.css">
 
-        body {
-            font-size: 20px;
-            background-color: rgb(502, 200, 314);
-        }
-
-        #junco {
-            background-color: blueviolet;
-
-        }
-
-        #junco {
-            color: aquamarine;
-        }
-
-        #ssa {
-            color: rgb(554, 123, 444);
-        }
-
-        p {
-            font-family: cursive, Arial, Helvetica, sans-serif;
-        }
-
-        .phones {
-            font-weight: bold;
-            line-height: 30px;
-        }
-        
-        
-    </style>
 </head>
 
 <body>
