--- a/fundamentos/3-introdução-a-HTML-e-CSS/dia2/index.html
+++ b/fundamentos/3-introdução-a-HTML-e-CSS/dia2/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h2 id="junco">Junco</h2>
-    <h2>Jacobina</h2>
+    <h2 id="jac">Jacobina </h2>
     <p>eu moro em jacobina bahia brasil a cidade do ouro meus amigos kkk e a cidade de zenobio e de joabe limar manoel
         gomes caneta azul azul caneta</p>
     <h2>Juazeiro</h2>
